--- a/app/src/main/res/layout/item_dashboard_comment.xml
+++ b/app/src/main/res/layout/item_dashboard_comment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -57,7 +58,7 @@
             android:contentDescription="@string/dashboard_comment_actions_menu_content_description"
             android:padding="8dp"
             android:src="@drawable/ic_more_vert_24"
-            android:tint="?attr/colorOnSurface" />
+            app:tint="?attr/colorOnSurface" />
 
     </LinearLayout>
 
