--- a/app/src/main/res/layout/activity_dashboard_team_member_profile.xml
+++ b/app/src/main/res/layout/activity_dashboard_team_member_profile.xml
@@ -279,7 +279,7 @@
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="@string/dashboard_team_member_profile_email_action"
                             android:padding="4dp"
-                            android:tint="?attr/colorPrimary"
+                            app:tint="?attr/colorPrimary"
                             android:clickable="true"
                             android:focusable="true"
                             android:src="@drawable/ic_contact_email_24" />
@@ -326,7 +326,7 @@
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="@string/dashboard_team_member_profile_phone_action"
                             android:padding="4dp"
-                            android:tint="?attr/colorPrimary"
+                            app:tint="?attr/colorPrimary"
                             android:clickable="true"
                             android:focusable="true"
                             android:src="@drawable/ic_contact_phone_24" />
