--- a/app/src/main/res/layout/activity_fullscreen_player.xml
+++ b/app/src/main/res/layout/activity_fullscreen_player.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black">
@@ -20,5 +21,5 @@
         android:contentDescription="@string/course_wizard_exit_fullscreen"
         android:padding="12dp"
         android:src="@drawable/ic_fullscreen_exit_24"
-        android:tint="@android:color/white" />
+        app:tint="@android:color/white" />
 </FrameLayout>
