--- a/app/src/main/res/layout/item_course_wizard_attachment.xml
+++ b/app/src/main/res/layout/item_course_wizard_attachment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
@@ -13,7 +14,7 @@
         android:layout_height="24dp"
         android:contentDescription="@string/course_wizard_attachment_video"
         android:src="@drawable/ic_course_resource_video_24"
-        android:tint="@color/black" />
+        app:tint="@color/black" />
 
     <LinearLayout
         android:layout_width="0dp"
