--- a/app/src/main/res/layout/item_dashboard_course_lesson.xml
+++ b/app/src/main/res/layout/item_dashboard_course_lesson.xml
@@ -12,7 +12,7 @@
         android:id="@+id/dashboardCourseLessonCheck"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:tint="@color/greenOleLogo"
+        app:tint="@color/greenOleLogo"
         android:padding="2dp"
         android:contentDescription="@string/dashboard_courses_content_description_icon"
         app:srcCompat="@drawable/ic_course_check_24" />
